WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23647
Fix PLATFORM(SKIA)'s ImageSource::clear method to match other ports
https://bugs.webkit.org/show_bug.cgi?id=23647
Summary
Fix PLATFORM(SKIA)'s ImageSource::clear method to match other ports
Darin Fisher (:fishd, Google)
Reported
2009-01-30 09:20:53 PST
Fix PLATFORM(SKIA)'s ImageSource::clear method to match other ports The actual bug is that images fail to render once they have been told by the cache to drop their decoded representation.
Attachments
v1 patch
(1.47 KB, patch)
2009-01-30 09:23 PST
,
Darin Fisher (:fishd, Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2009-01-30 09:23:00 PST
Created
attachment 27184
[details]
v1 patch This has already been reviewed by brettw in the chromium source tree here:
http://codereview.chromium.org/18034
Eric Seidel (no email)
Comment 2
2009-01-30 10:05:06 PST
Comment on
attachment 27184
[details]
v1 patch LGTM.
Darin Fisher (:fishd, Google)
Comment 3
2009-01-30 10:24:24 PST
http://trac.webkit.org/changeset/40410
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug