2009-01-30  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23647
        Fix PLATFORM(SKIA)'s ImageSource::clear method to match other ports

        * platform/graphics/skia/ImageSourceSkia.cpp:
        (WebCore::ImageSource::clear):



Canonical link: https://commits.webkit.org/32593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40410 268f45cc-cd09-0410-ab3c-d52691b4dbfc